python/testData/inspections/RenameUnresolvedReference.py

def foo(y1):
    <error descr="Unresolved reference 'y'">y<caret></error> + 1
    print <error descr="Unresolved reference 'y'">y</error>

